@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.2.0
 
+  *) [TS-548] remove Initialize.cc Initialize.h
+
   *) [TS-2082] remove STANDALONE_IOCORE FIXME_NONMODULAR and NON_MODULAR defines
 
   *) [TS-312] Add option to always share keep-alive connections to the origin server
